fix rull-em-all z-index for menu

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -164,7 +164,7 @@ ADMIN
   top                                 : 0;
   width                               : 100%;
   position                            : fixed;
-  z-index                             : 99999;
+  z-index                             : 10;
 }
 #menu-bar.affix + .container-fluid {
   padding-top                         : 50px;
